--- a/tasks/openldap.yml
+++ b/tasks/openldap.yml
@@ -202,13 +202,26 @@
           - '{0}dn.exact="cn=replication,{{ ldap_basedn }}" time=unlimited size=unlimited'
         state: exact
 
-    - name: "modules for replica"
+    - name: "modules for replica and not overlay"
+      when: not ldap_memberOf_overlay
       ldap_attr:
         dn: cn=module{0},cn=config
         name: olcModuleLoad
         values:
           - '{1}syncprov'
           - '{2}accesslog'
+        state: present
+
+    - name: "modules for replica and overlay"
+      when: ldap_memberOf_overlay
+      ldap_attr:
+        dn: cn=module{0},cn=config
+        name: olcModuleLoad
+        values:
+          - '{1}syncprov'
+          - '{2}accesslog'
+          - '{3}memberof'
+          - '{4}refint'
         state: present
 
     - name: "directory for accesslog"
@@ -285,6 +298,19 @@
           olcSpReloadHint: 'TRUE'
         state: present
 
+    - name: "memberOf provider for main database when master replica"
+      when: ldap_memberOf_overlay
+      ldap_entry:
+        dn: "olcOverlay={2}memberof,olcDatabase={1}mdb,cn=config"
+        objectClass:
+          - olcConfig
+          - olcMemberOf
+          - olcOverlayConfig
+          - top
+        attributes:
+          olcMemberOfRefInt: "TRUE"
+        state: present
+
 - name: "create ou=People branch"
   when: not ldap_slave_replica
   ldap_entry:
@@ -314,3 +340,26 @@
       logfilter="(&(objectClass=auditWriteObject)(reqResult=0))"
       syncdata=accesslog
     state: exact
+
+- name: "memberOf overlay module when not master replica"
+  when: ldap_memberOf_overlay and not ldap_master_replica
+  ldap_attr:
+    dn: cn=module{0},cn=config
+    name: olcModuleLoad
+    values:
+      - '{0}memberof'
+      - '{1}refint'
+    state: present
+
+- name: "memberOf provider for main database when not master replica"
+  when: ldap_memberOf_overlay and not ldap_master_replica
+  ldap_entry:
+    dn: "olcOverlay={0}memberof,olcDatabase={1}mdb,cn=config"
+    objectClass:
+      - olcConfig
+      - olcMemberOf
+      - olcOverlayConfig
+      - top
+    attributes:
+      olcMemberOfRefInt: "TRUE"
+    state: present
