--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -42,5 +42,8 @@ ldap_users: []
 # whether to configure memberOf overlay for adding the attribute memberOf to group members
 ldap_memberOf_overlay: no
 
+#whether to configure strong password hashing
+ldap_strong_password_hashing: no
+
 ldap_basedn: '{{ "dc=" + ldap_domain.split(".") | join(",dc=") }}'
 ldap_data_admin_dn: '{{ "cn=admin," + ldap_basedn }}'
