--- a/tasks/openldap.yml
+++ b/tasks/openldap.yml
@@ -57,6 +57,13 @@
       - ldap-utils
       - python-ldap
 
+- name: "install slapd-contrib with Argon2 key derivation function"
+  when: ldap_strong_password_hashing
+  apt:
+    default_release: "{{ ansible_distribution_release }}-backports"
+    name: slapd-contrib
+    state: present
+
 - name: "hold slapd package from upgrading"
   when: ldap_hold_package
   dpkg_selections:
@@ -141,54 +148,90 @@
       password: "{{ ldap_replication_password }}"
       description: "user for LDAP replication"
 
-- name: "LDAP access rules empty"
-  set_fact:
-    olcAccess_values: []
-    oldAccess_replication:
-      - >-
-        to dn.subtree="{{ ldap_basedn }}"
-        by dn.exact="cn=replication,{{ ldap_basedn }}" read
-        by * break
-
-- name: "LDAP access rule for replication must be first"
-  when: ldap_master_replica
-  set_fact:
-    olcAccess_values: "{{ olcAccess_values + oldAccess_replication }}"
-
-- name: "LDAP access rules start"
-  set_fact:
-    olcAccess_values: "{{ olcAccess_values + ldap_access_rules_start }}"
-
-- name: "additional LDAP access rules"
-  set_fact:
-    olcAccess_values: "{{ olcAccess_values + ldap_access_rules_additional }}"
-
-- name: "LDAP access rules end"
-  set_fact:
-    olcAccess_values: "{{ olcAccess_values + ldap_access_rules_end }}"
-
-- name: "numbering olcAcccess values with their indexes"
-  set_fact:
-    olcAccess_numbered_values: "{{ olcAccess_numbered_values| default([]) +  [ ''.join(('{',idx|string,'}',item)) ] }}"
-  loop: "{{ olcAccess_values }}"
-  loop_control:
-    index_var: idx
-
-- debug:
-    var: olcAccess_numbered_values
-
-- name: "modify OpenLDAP access rights"
-  ldap_attr:
-    dn: olcDatabase={1}mdb,cn=config
-    name: olcAccess
-    values: "{{ olcAccess_numbered_values }}"
-    state: exact
+- name: "LDAP access rules"
+  block:
+    - name: "LDAP access rules empty"
+      set_fact:
+        olcAccess_values: []
+        oldAccess_replication:
+          - >-
+            to dn.subtree="{{ ldap_basedn }}"
+            by dn.exact="cn=replication,{{ ldap_basedn }}" read
+            by * break
+    - name: "LDAP access rule for replication must be first"
+      when: ldap_master_replica
+      set_fact:
+        olcAccess_values: "{{ olcAccess_values + oldAccess_replication }}"
+    - name: "LDAP access rules start"
+      set_fact:
+        olcAccess_values: "{{ olcAccess_values + ldap_access_rules_start }}"
+    - name: "additional LDAP access rules"
+      set_fact:
+        olcAccess_values: "{{ olcAccess_values + ldap_access_rules_additional }}"
+    - name: "LDAP access rules end"
+      set_fact:
+        olcAccess_values: "{{ olcAccess_values + ldap_access_rules_end }}"
+    - name: "numbering olcAcccess values with their indexes"
+      set_fact:
+        olcAccess_numbered_values: "{{ olcAccess_numbered_values| default([]) +  [ ''.join(('{',idx|string,'}',item)) ] }}"
+      loop: "{{ olcAccess_values }}"
+      loop_control:
+        index_var: idx
+    - debug:
+        var: olcAccess_numbered_values
+    - name: "modify OpenLDAP access rights"
+      ldap_attr:
+        dn: olcDatabase={1}mdb,cn=config
+        name: olcAccess
+        values: "{{ olcAccess_numbered_values }}"
+        state: exact
 
 - name: "set unlimited size of searches"
   ldap_attr:
     dn: olcDatabase={-1}frontend,cn=config
     name: olcSizeLimit
     values: "{{ ldap_size_limit }}"
+    state: exact
+
+- name: "LDAP modules"
+  block:
+    - name: "modules lists"
+      set_fact:
+        olcModuleLoad_values: [ 'back_mdb' ]
+        olcModuleLoad_master_replica: [ 'syncprov', 'accesslog' ]
+        olcModuleLoad_memberof: [ 'memberof', 'refint' ]
+        olcModuleLoad_argon2: [ 'pw-argon2' ]
+    - name: "modules for master replica"
+      when: ldap_master_replica
+      set_fact:
+        olcModuleLoad_values: "{{ olcModuleLoad_values +  olcModuleLoad_master_replica }}"
+    - name: "modules for memberOf overlay"
+      when: ldap_memberOf_overlay
+      set_fact:
+        olcModuleLoad_values: "{{ olcModuleLoad_values +  olcModuleLoad_memberof }}"
+    - name: "module pw-argon2"
+      when: ldap_strong_password_hashing
+      set_fact:
+        olcModuleLoad_values: "{{ olcModuleLoad_values +  olcModuleLoad_argon2 }}"
+    - name: "numbering olcModuleLoad values with their indexes"
+      set_fact:
+        olcModuleLoad_numbered_values: "{{ olcModuleLoad_numbered_values| default([]) +  [ ''.join(('{',idx|string,'}',item)) ] }}"
+      loop: "{{ olcModuleLoad_values }}"
+      loop_control:
+        index_var: idx
+    - name: "activate modules {{ olcModuleLoad_numbered_values }}"
+      ldap_attr:
+        dn: cn=module{0},cn=config
+        name: olcModuleLoad
+        values: "{{ olcModuleLoad_numbered_values }}"
+        state: present
+
+- name: "set strong hashing method as default for password hashing"
+  when: ldap_strong_password_hashing
+  ldap_attr:
+    dn: "olcDatabase={-1}frontend,cn=config"
+    name: olcPasswordHash
+    values: "{ARGON2}"
     state: exact
 
 - name: "replication"
@@ -201,28 +244,6 @@
         values:
           - '{0}dn.exact="cn=replication,{{ ldap_basedn }}" time=unlimited size=unlimited'
         state: exact
-
-    - name: "modules for replica and not overlay"
-      when: not ldap_memberOf_overlay
-      ldap_attr:
-        dn: cn=module{0},cn=config
-        name: olcModuleLoad
-        values:
-          - '{1}syncprov'
-          - '{2}accesslog'
-        state: present
-
-    - name: "modules for replica and overlay"
-      when: ldap_memberOf_overlay
-      ldap_attr:
-        dn: cn=module{0},cn=config
-        name: olcModuleLoad
-        values:
-          - '{1}syncprov'
-          - '{2}accesslog'
-          - '{3}memberof'
-          - '{4}refint'
-        state: present
 
     - name: "directory for accesslog"
       file:
@@ -340,16 +361,6 @@
       logfilter="(&(objectClass=auditWriteObject)(reqResult=0))"
       syncdata=accesslog
     state: exact
-
-- name: "memberOf overlay module when not master replica"
-  when: ldap_memberOf_overlay and not ldap_master_replica
-  ldap_attr:
-    dn: cn=module{0},cn=config
-    name: olcModuleLoad
-    values:
-      - '{0}memberof'
-      - '{1}refint'
-    state: present
 
 - name: "memberOf provider for main database when not master replica"
   when: ldap_memberOf_overlay and not ldap_master_replica
