--- a/tasks/openldap.yml
+++ b/tasks/openldap.yml
@@ -153,6 +153,17 @@
     state: restarted
   when: secure_port_enabled.changed or ssl_ldif.changed
 
+- name: "set olcDbMaxSize on olcDatabase={1}mdb"
+  ldap_attrs:
+    dn: "olcDatabase={1}mdb,cn=config"
+    attributes:
+      olcDbMaxSize: "{{ ldap_mdb1_olcDbMaxSize }}"
+    state: exact
+
+- name: "size in MiB"
+  debug:
+    msg: "olcDbMaxSize is {{ ldap_mdb1_olcDbMaxSize / (1024 * 1024) }} MiB"
+
 - name: "pass-through authentication"
   when: ldap_pass_through_authentication
   block:
